test/assets/invalid/expect-string.hs

a :: Int
a = length 'a'